--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,6 @@
 PORT=4000
 MONGODB_URL=mongodb://localhost:27017/slack
 SECRET = secret keyword
+CLOUDINARY_CLOUD_NAME: cloudinary account
+CLOUDINARY_API_KEY: cloudinary key
+CLOUDINARY_API_SECRET: cloudinary secret
